# zephyr_mesh

./: west.yml
applications/device-hello-world/: CMakeLists.txt
boards/xtensa/esp32_wroom_devkitc/: Kconfig.board  Kconfig.defconfig  esp32_wroom_devkitc.dts  esp32_wroom_devkitc.yaml  esp32_wroom_devkitc_defconfig
